# rust_blog

./: Cargo.toml  README.md  blog.sql  setup.sh
app/: blog.sql  server.rs
app/assets/: style.css
app/assets/css/: style.css
app/config/routes/: mod.rs
app/controllers/: about_controller.rs  mod.rs  posts_controller.rs  users_controller.rs
app/db/: blog.sql  blog.sqlite3  mod.rs  schema.sql
app/models/: post.rs  user.rs
app/views/: about.rs  layouts.rs  mod.rs  posts.rs  users.rs
public/assets/css/: style.css
public/assets/js/: main.js
src/: main.rs
src/config/router/: mod.rs
src/config/routes/: mod.rs
