[package]
name = "blog"
version = "0.1.0"
authors = ["Bryan Mytko <bryanmytko@gmail.com>"]

[dependencies.iron]
version = "*"

[dependencies]
router = "*"
rustc-serialize = "0.3"
maud = { git = "https://github.com/lfairy/maud.git" }
maud_macros = { git = "https://github.com/lfairy/maud.git" }
staticfile = "*"
mount = { git = "https://github.com/iron/mount.git" }
rusqlite = "*"

[[bin]]
name = "server"
path = "app/server.rs"
